--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@neondatabase/serverless": "^0.10.4",
     "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/adapter-neon": "^6.5.0",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
