--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/adapter-neon": "^6.5.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
