--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@react-email/components": "^0.0.42",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@uploadthing/react": "^7.3.1",
@@ -41,8 +42,10 @@
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.16",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.3",
+    "resend": "^4.6.0",
     "slugify": "^1.6.6",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.1",
