--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.42",
+    "@react-email/preview": "0.0.13",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@uploadthing/react": "^7.3.1",
@@ -46,7 +47,7 @@
     "react-email": "^4.0.17",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.3",
-    "resend": "^4.6.0",
+    "resend": "^4.8.0",
     "slugify": "^1.6.6",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.0.1",
@@ -65,7 +66,7 @@
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.0",
     "bufferutil": "^4.0.9",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "jest": "^29.7.0",
